[package]
name = "competetive-programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono      = ">= 0.4.22"
log = ">= 0.4.17"
competetive_rs = {path = "./lib/competetive_rs"}
logger = {path = "./lib/logger"}
